--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,6 @@ controllers:
 home:
     path: /
     controller: App\Controller\HomeController::index
+login:
+    path: /login
+    methods: ['POST']
