--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,3 +28,6 @@ services:
             - { name: doctrine.event_listener, event: 'prePersist' }
             - { name: doctrine.event_listener, event: 'onFlush' }
             - { name: doctrine.event_listener, event: 'loadClassMetadata' }
+    App\State\UserPasswordHasher:
+        bind:
+            $processor: '@api_platform.doctrine.orm.state.persist_processor'
