--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -20,3 +20,8 @@ api_platform:
     event_listeners_backward_compatibility_layer: false
     keep_legacy_inflector: false
     enable_entrypoint: false
+    swagger:
+        api_keys:
+            JWT:
+                name: Authorization
+                type: header
